--- a/SistemaDeAdministracionDePrestamos/Views/Home/Index.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Sistema de Administracion de Prestamos";
 }
 
 <div class="row bg-title">
