PrestamosController partialy functional (index, create, edit)

--- a/SistemaDeAdministracionDePrestamos/Views/Clientes/Details.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Clientes/Details.cshtml
@@ -1,13 +1,28 @@
 ﻿@model SistemaDeAdministracionDePrestamos.Models.Cliente
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Details</h2>
+<div class="row bg-title">
+    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+        <h4 class="page-title">Clientes</h4>
+    </div>
+    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+        <ol class="breadcrumb">
+            <li>
+                @Html.ActionLink("Clientes", "Index")
+            </li>
+            <li class="active">
+                @Html.ActionLink("Detalles del Cliente", "details")
+            </li>
+        </ol>
+    </div>
+</div>
+
+<h2>Detalles del cliente</h2>
 
 <div>
-    <h4>Cliente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,6 +60,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default" }) |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }, new { @class = "btn btn-info"})
+
 </p>
