--- a/SistemaDeAdministracionDePrestamos/Views/Clientes/Delete.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Clientes/Delete.cshtml
@@ -1,14 +1,31 @@
 ﻿@model SistemaDeAdministracionDePrestamos.Models.Cliente
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
+<div class="row bg-title">
+    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+        <h4 class="page-title">Clientes</h4>
+    </div>
+    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+        <ol class="breadcrumb">
+            <li>
+                @Html.ActionLink("Clientes", "Index")
+            </li>
+            <li class="active">
+                @Html.ActionLink("Eliminar Cliente", "delete")
+            </li>
+        </ol>
+    </div>
+</div>
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>Eliminar</h2>
+
+<h3>¿Está seguro que desea eliminar a <font color="red"><b>@Model.Nombre</b></font> de su lista de clientes?</h3>
 <div>
-    <h4>Cliente</h4>
+    <hr />
+    <h4><b>Detalles del cliente</b></h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -49,8 +66,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default" }) |
+            <input type="submit" value="Eliminar" class="btn btn-danger" />  
         </div>
     }
 </div>
