--- a/SistemaDeAdministracionDePrestamos/Views/Clientes/Edit.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Clientes/Edit.cshtml
@@ -1,10 +1,26 @@
 ﻿@model SistemaDeAdministracionDePrestamos.Models.Cliente
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Edit</h2>
+<div class="row bg-title">
+    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+        <h4 class="page-title">Clientes</h4>
+    </div>
+    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+        <ol class="breadcrumb">
+            <li>
+                @Html.ActionLink("Clientes", "Index")
+            </li>
+            <li class="active">
+                @Html.ActionLink("Editar Cliente", "Edit")
+            </li>
+        </ol>
+    </div>
+</div>
+
+<h2>Editar cliente</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +28,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Cliente</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -51,14 +66,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default" })
 </div>
 
 @section Scripts {
