--- a/SistemaDeAdministracionDePrestamos/Views/Clientes/Delete.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Clientes/Delete.cshtml
@@ -66,7 +66,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default" }) |
+            @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-default" }) |
             <input type="submit" value="Eliminar" class="btn btn-danger" />  
         </div>
     }
