--- a/SistemaDeAdministracionDePrestamos/Views/Prestamos/Delete.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Prestamos/Delete.cshtml
@@ -1,14 +1,29 @@
 ﻿@model SistemaDeAdministracionDePrestamos.Models.ViewModels.PrestamoViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar prestamo";
 }
 
-<h2>Delete</h2>
+<div class="row bg-title">
+    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+        <h4 class="page-title">Prestamos</h4>
+    </div>
+    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+        <ol class="breadcrumb">
+            <li>
+                @Html.ActionLink("Prestamos", "Index")
+            </li>
+            <li class="active">
+                @Html.ActionLink("Eliminar prestamo", "Eliminar")
+            </li>
+        </ol>
+    </div>
+</div>
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>Eliminar Prestamo</h2>
+
+<h3>¿Está seguro que desea eliminar a <font color="red"><b>@Model.Cliente</b></font> de su lista de Prestamos?</h3>
 <div>
-    <h4>PrestamoViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -40,7 +55,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Estatus)
+            @Html.DisplayFor(model => model.Status)
         </dd>
 
     </dl>
@@ -49,8 +64,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-default"}) |
+            <input type="submit" value="Eliminar" class="btn btn-danger" /> 
         </div>
     }
 </div>
