--- a/SistemaDeAdministracionDePrestamos/Views/Prestamos/Edit.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Prestamos/Edit.cshtml
@@ -1,8 +1,25 @@
 ﻿@model SistemaDeAdministracionDePrestamos.Models.ViewModels.PrestamoViewModel
+    @using System.Globalization
 
 @{
     ViewBag.Title = "Modificar prestamo";
 }
+
+<div class="row bg-title">
+    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+        <h4 class="page-title">Prestamos</h4>
+    </div>
+    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+        <ol class="breadcrumb">
+            <li>
+                @Html.ActionLink("Prestamos", "Index")
+            </li>
+            <li class="active">
+                @Html.ActionLink("Modificar Prestamo", "Edit")
+            </li>
+        </ol>
+    </div>
+</div>
 
 <h2>Modificar prestamo</h2>
 
