--- a/SistemaDeAdministracionDePrestamos/Views/Prestamos/Index.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Prestamos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SistemaDeAdministracionDePrestamos.Models.ViewModels.PrestamoViewModel>
+﻿@model IPagedList<PrestamoViewModel>
 
 @{
     ViewBag.Title = "Prestamos";
@@ -22,45 +22,5 @@
 <p>
     @Html.ActionLink("Nuevo Prestamo", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table table-hover">
-    <thead class="thead-dark">
-        <tr class="text-uppercase">
-            <th>
-                @Html.DisplayNameFor(model => model.Cliente)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Monto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Fecha)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estatus)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cliente)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Monto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fecha)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.ActionLink("Modificar", "Edit", new { id=item.Id }, new { @class = "btn btn-info"}) |
-            @Html.ActionLink("Detalles", "Details", new { id=item.Id }, new { @class = "btn btn-primary" }) |
-            @Html.ActionLink("Eliminar", "Delete", new { id=item.Id }, new { @class = "btn btn-danger" })
-        </td>
-    </tr>
-}
-
-</table>
+@Html.Partial("_Prestamos", Model)
