--- a/SistemaDeAdministracionDePrestamos/Views/Prestamos/_Prestamos.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Prestamos/_Prestamos.cshtml
@@ -1,24 +1,24 @@
-﻿@model IPagedList<Cliente>
+﻿@model IPagedList<PrestamoViewModel>
 
-<div id="clientesList">
-    <div class="pagedList" data-otf-target ="#clientesList">
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page }), PagedListRenderOptions.MinimalWithPageCountText)
+<div id="prestamosList">
+    <div class="pagedList" data-otf-target="#prestamosList">
+        @Html.PagedListPager(Model, page => @Url.Action("Index", new { page }), PagedListRenderOptions.MinimalWithPageCountText )
     </div>
 
     <table class="table table-hover">
         <thead class="thead-dark">
             <tr class="text-uppercase">
                 <th>
-                    Nombre
+                    Cliente
                 </th>
                 <th>
-                    Cédula
+                    Monto
                 </th>
                 <th>
-                    Dirección
+                    Fecha
                 </th>
                 <th>
-                    Telefono
+                    Estatus
                 </th>
                 <th></th>
             </tr>
@@ -26,23 +26,23 @@
 
         @foreach (var item in Model)
         {
-            <tbody data-otg-ajax="true" data-otf-target="#clientesList">
+            <tbody data-otg-ajax="true" data-otf-target="#prestamosList" >
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
+                        @Html.DisplayFor(modelItem => item.Cliente)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Cedula)
+                        @Html.DisplayFor(modelItem => item.Monto)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Direccion)
+                        @Html.DisplayFor(modelItem => item.Fecha)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Telefono)
+                        @Html.DisplayFor(modelItem => item.Status)
                     </td>
                     <td>
-                        @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-info" })
-                        @Html.ActionLink("Detalles", "Details", new { id = item.Id }, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Modificar", "Edit", new { id = item.Id }, new { @class = "btn btn-info" }) |
+                        @Html.ActionLink("Detalles", "Details", new { id = item.Id }, new { @class = "btn btn-primary" }) |
                         @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                     </td>
                 </tr>
@@ -50,8 +50,8 @@
         }
 
     </table>
-
-    <div class="pagedList" data-otf-target="#clientesList">
+    <div class="pagedList" data-otf-target="#prestamosList">
         @Html.PagedListPager(Model, page => Url.Action("Index", new { page }), PagedListRenderOptions.MinimalWithPageCountText)
     </div>
+
 </div>
