--- a/SistemaDeAdministracionDePrestamos/Views/Shared/_Layout.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                             <a href="@Url.Action("Index", "Clientes")" class="waves-effect"><i class="fa fa-group fa-fw" aria-hidden="true"></i>Clientes</a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Contact", "Home")" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Contact</a>
+                            <a href="@Url.Action("Index", "Prestamos")" class="waves-effect"><i class="fa fa-credit-card-alt fa-fw" aria-hidden="true"></i>Prestamos</a>
                         </li>
                         <li>
                             <a href="fontawesome.html" class="waves-effect"><i class="fa fa-font fa-fw" aria-hidden="true"></i>Icons</a>
