--- a/SistemaDeAdministracionDePrestamos/Views/Prestamos/Index.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Prestamos/Index.cshtml
@@ -1,8 +1,5 @@
-﻿@model IEnumerable<SistemaDeAdministracionDePrestamos.Models.ViewModels.PrestamoViewModel>
+﻿@model IPagedList<PrestamoViewModel>
 
-@{
-    ViewBag.Title = "Prestamos";
-}
 
 <div class="row bg-title">
     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
@@ -18,49 +15,8 @@
 </div>
 
 <h2>Listado de prestamos</h2>
-
 <p>
-    @Html.ActionLink("Nuevo Prestamo", "Create", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Nuevo Prestamo", "Create", null, new { @class = "btn btn-success"})
 </p>
-<table class="table table-hover">
-    <thead class="thead-dark">
-        <tr class="text-uppercase">
-            <th>
-                @Html.DisplayNameFor(model => model.Cliente)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Monto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Fecha)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estatus)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cliente)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Monto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fecha)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.ActionLink("Modificar", "Edit", new { id=item.Id }, new { @class = "btn btn-info"}) |
-            @Html.ActionLink("Detalles", "Details", new { id=item.Id }, new { @class = "btn btn-primary" }) |
-            @Html.ActionLink("Eliminar", "Delete", new { id=item.Id }, new { @class = "btn btn-danger" })
-        </td>
-    </tr>
-}
-
-</table>
+@Html.Partial("_Prestamos", Model)
