Adding comments to the code for documentation

--- a/SistemaDeAdministracionDePrestamos/Views/Clientes/Edit.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Clientes/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SistemaDeAdministracionDePrestamos.Models.Cliente
 
 @{
-    ViewBag.Title = "Editar";
+    ViewBag.Title = "Modificar";
 }
 
 <div class="row bg-title">
@@ -14,13 +14,13 @@
                 @Html.ActionLink("Clientes", "Index")
             </li>
             <li class="active">
-                @Html.ActionLink("Editar Cliente", "Edit")
+                @Html.ActionLink("Modificar Cliente", "Edit")
             </li>
         </ol>
     </div>
 </div>
 
-<h2>Editar cliente</h2>
+<h2>Modificar datos del cliente</h2>
 
 
 @using (Html.BeginForm())
