--- a/SistemaDeAdministracionDePrestamos/Views/Clientes/Details.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Clientes/Details.cshtml
@@ -61,6 +61,6 @@
 </div>
 <p>
     @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default" }) |
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }, new { @class = "btn btn-info"})
+    @Html.ActionLink("Modificar", "Edit", new { id = Model.Id }, new { @class = "btn btn-info"})
 
 </p>
