--- a/SistemaDeAdministracionDePrestamos/Views/Clientes/_Clientes.cshtml
+++ b/SistemaDeAdministracionDePrestamos/Views/Clientes/_Clientes.cshtml
@@ -41,7 +41,7 @@
                         @Html.DisplayFor(modelItem => item.Telefono)
                     </td>
                     <td>
-                        @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-info" })
+                        @Html.ActionLink("Modificar", "Edit", new { id = item.Id }, new { @class = "btn btn-info" })
                         @Html.ActionLink("Detalles", "Details", new { id = item.Id }, new { @class = "btn btn-primary" })
                         @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                     </td>
